# dwys

./: .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  setup.py
src/dwys/: __init__.py
tests/: test_checker.py  test_parser.py
