[tool.poetry]
name = "dwys"
version = "0.0.4"
description = "A language agnostic doctesting library"
authors = ["Vince Knight <vincent.knight@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2.2"
black = "^19.3b0"
isort = "^4.3.17"
